# hack_api

./: Makefile  README.md  pyproject.toml
hackathon/: crew.py  main.py
hackathon/config/: config.py  logging_config.yaml
hackathon/crew_config/: agents.yaml  tasks.yaml
